using System.Collections;
using System.Collections.Generic;
using UnityEngine;


    public class Constants
    {
        public const int TARGETBRICKS = 5; 

        public const string ANIM_RUN = "run";
        public const string ANIM_IDLE = "idle";
        public const string ANIM_STAND = "stand";
        public const string ANIM_FALLING = "fall";
        public const string ANIM_WIN = "win";

        public const string TAG_BRICK = "Brick";
        public const string TAG_PLAYER = "Player";
        public const string TAG_BOT = "Bot";
        public const string TAG_FINISHBOX = "FinishBox";
    }

